# EmbeddedTransformer

./: CMakeLists.txt  README.md  epilepsyTransformer.c  epilepsyTransformer.cpp  main.c  transformer.cpp  transformer.h
accelerator/: smm_gem.cpp  smm_gem.h
transformer_C/: addNormC.h  dense_layerC.c  dense_layerC.h  matMulC.h  selfattentionC.c  selfattentionC.h  softmaxC.c  softmaxC.h  tokenPosEmbeddingC.c  tokenPosEmbeddingC.h  transformerBlockC.c  transformerBlockC.h  transposeC.h  weightsAndBiasesC.h
transformer_layers/: addNorm.cc  addNorm.h  debuggerFunctions.cc  debuggerFunctions.h  dense.cc  dense.h  matmul.cc  matmul.h  selfattention.cc  selfattention.h  softmax.cc  softmax.h  tokenPosEmebedding.cc  tokenPosEmebedding.h  transformerBlock.cc  transformerBlock.h  transpose.cc  transpose.h  weightsAndBiases.cc  weightsAndBiases.h
